# Meeting_Assistant

./: .gitignore  AGENTS.md  README.md  alembic.ini  meeting_assistant.db  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_pgvector_embeddings.py  0003_approval_requests.py  0004_retrieval_embeddings.py
src/meeting_assistant/: bootstrap.py  container.py  main.py  repositories.py  worker.py
src/meeting_assistant/api/: app.py  auth.py  deps.py  rate_limit.py
src/meeting_assistant/api/routes/: admin.py  approvals.py  batch.py  health.py  retrieval.py  workflows.py
src/meeting_assistant/core/: config.py  logging.py  telemetry.py
src/meeting_assistant/db/: models.py  session.py  types.py
src/meeting_assistant/schemas/: approval.py  batch.py  planner.py  retrieval.py  workflow.py
src/meeting_assistant/services/: agent.py  approvals.py  asr.py  audio_storage.py  context.py  embeddings.py  jobs.py  normalizer.py  orchestrator.py  planner.py  query.py  query_answerer.py  queue.py  readiness.py  retrieval_pagination.py  tools.py
src/meeting_assistant/services/tools/: __init__.py  base.py  executor.py  factory.py  google_auth.py  http.py
src/meeting_assistant/services/tools/providers/: __init__.py  calendar.py  email.py  jira.py  slack.py
tests/: conftest.py  test_agent.py  test_api.py  test_approvals.py  test_asr.py  test_audio_storage.py  test_auth.py  test_batch_upload.py  test_embeddings.py  test_jobs.py  test_migrations.py  test_planner.py  test_query.py  test_queue.py  test_readiness.py  test_tool_providers.py  test_tools.py
