[project]
name = "meeting-assistant"
version = "0.1.0"
description = "Batch-first meeting assistant scaffold with production-shaped boundaries."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.4",
  "arq>=0.28.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "openai>=2.41.0",
  "pgvector>=0.4.2",
  "psycopg[binary]>=3.3.4",
  "pydantic-settings>=2.4.0",
  "redis>=5.3.1",
  "sqlalchemy>=2.0.35",
  "uvicorn>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_assistant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
