[project]
name = "meeting-assistant"
version = "0.1.0"
description = "Batch-first meeting assistant scaffold with production-shaped boundaries."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.4",
  "arq>=0.28.0",
  "boto3>=1.35.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "openai>=2.41.0",
  "pgvector>=0.4.2",
  "psycopg[binary]>=3.3.4",
  "pydantic-settings>=2.4.0",
  "pyjwt>=2.10.0",
  "python-multipart>=0.0.9",
  "redis>=5.3.1",
  "slowapi>=0.1.9",
  "sqlalchemy>=2.0.35",
  "structlog>=24.4.0",
  "uvicorn>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14.0",
  "opentelemetry-exporter-otlp-proto-http>=1.29.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-httpx>=0.50b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
  "opentelemetry-sdk>=1.29.0",
  "pytest>=8.3.3",
  "ruff>=0.9.0",
]
storage = [
  "google-cloud-storage>=2.18.0",
]
tools = [
  "google-auth>=2.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_assistant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/meeting_assistant/db/models.py" = ["UP037"]

[tool.mypy]
python_version = "3.12"
files = ["src/meeting_assistant"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
warn_unused_ignores = true
disable_error_code = [
  "arg-type",
  "assignment",
  "call-overload",
  "dict-item",
  "list-item",
  "misc",
  "no-redef",
  "return-value",
  "typeddict-item",
  "union-attr",
]
